--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -2,6 +2,8 @@ FROM python:3.10-alpine
 
 COPY . /app
 COPY ./requirements.txt /app/requirements.txt
+COPY ./ssl.crt /app/ssl.crt
+COPY ./ssl.key /app/ssl.key
 
 WORKDIR /app
 
