--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -16,4 +16,4 @@ RUN apk update && apk add python3-dev \
 
 RUN pip install -r requirements.txt
 
-CMD ["gunicorn", "--certfile", "ssl.crt", "--keyfile", "ssl.key", "-b", "0.0.0.0:8443", "--workers", "1", "app:app", "--preload"]
+CMD ["gunicorn", "--certfile", "ssl.crt", "--keyfile", "ssl.key", "-b", "0.0.0.0:8443", "--workers", "1", "app:app", "--preload", "--error-logfile", "app.log", "--log-level", "debug"]
